<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.sunrise.game</groupId>
        <artifactId>sunrise-game-frame</artifactId>
        <version>1.0</version>
    </parent>

    <artifactId>game</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.sunrise.game</groupId>
            <artifactId>network</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.sunrise.game</groupId>
            <artifactId>gen</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <!-- 启用完整的注解处理 -->
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            
            <!-- ExternalServer -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>make-assembly-external</id>
                        <!-- 绑定到打包生命周期阶段上 -->
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>sunrise-external</finalName>
                            <outputDirectory>${project.basedir}/../start/jar</outputDirectory>
                            <!-- 指定打包方式为jar -->
                            <archive>
                                <manifest>
                                    <!-- 指定主类 -->
                                    <mainClass>org.sunrise.game.external.main.ExternalServerStartUp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <!-- 指定打包成jar包 -->
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- GameServer -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>make-assembly-game</id>
                        <!-- 绑定到打包生命周期阶段上 -->
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>sunrise-game</finalName>
                            <outputDirectory>${project.basedir}/../start/jar</outputDirectory>
                            <!-- 指定打包方式为jar -->
                            <archive>
                                <manifest>
                                    <!-- 指定主类 -->
                                    <mainClass>org.sunrise.game.game.main.GameServerStartUp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <!-- 指定打包成jar包 -->
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- GlobalServer -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>make-assembly-global</id>
                        <!-- 绑定到打包生命周期阶段上 -->
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>sunrise-global</finalName>
                            <outputDirectory>${project.basedir}/../start/jar</outputDirectory>
                            <!-- 指定打包方式为jar -->
                            <archive>
                                <manifest>
                                    <!-- 指定主类 -->
                                    <mainClass>org.sunrise.game.global.main.GlobalServerStartUp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <!-- 指定打包成jar包 -->
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- GmBackServer -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>make-assembly-gmback</id>
                        <!-- 绑定到打包生命周期阶段上 -->
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>sunrise-gmback</finalName>
                            <outputDirectory>${project.basedir}/../start/jar</outputDirectory>
                            <!-- 指定打包方式为jar -->
                            <archive>
                                <manifest>
                                    <!-- 指定主类 -->
                                    <mainClass>org.sunrise.game.gmback.main.GmBackServerStartUp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <!-- 指定打包成jar包 -->
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- HttpServer -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>make-assembly-http</id>
                        <!-- 绑定到打包生命周期阶段上 -->
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>sunrise-http</finalName>
                            <outputDirectory>${project.basedir}/../start/jar</outputDirectory>
                            <!-- 指定打包方式为jar -->
                            <archive>
                                <manifest>
                                    <!-- 指定主类 -->
                                    <mainClass>org.sunrise.game.http.main.HttpServerStartUp</mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <!-- 指定打包成jar包 -->
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <appendAssemblyId>false</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>